REVISION 6 -- SE MEJORO CAMPOS DE CUANTIA EN EL DESARROLLO AUDIENCIA Y SE ARREGLO QUE MOSTRARA LA NUEVA CUANTIA SI ESTA HABIA SIDO MODIFICADA

--- a/src/main/webapp/resources/css/madiba.css
+++ b/src/main/webapp/resources/css/madiba.css
@@ -56,3 +56,11 @@
 .espacio5{
 	padding-left:5%
 }
+
+.inputPretenciones{
+	border-radius: 140px 140px 140px 140px;
+}
+
+.divPretenciones{
+	padding-top: 7px;
+}
